openscore-ui/k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openscore-ui
  namespace: openscore
spec:
  selector:
    matchLabels:
      app: openscore-ui
  replicas: 1
  template:
    metadata:
      labels:
        app: openscore-ui
    spec:
      containers:
        - name: ui
          image: registry.digitalocean.com/openscore/openscore-ui:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
