openscore-ui/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openscore-ui
  namespace: openscore
spec:
  ports:
    - port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: openscore-ui
